Changed the NPCs and fixed their rotation